Added mark-deleted support.